testdata/test/resources/com/yafred/asn1/test/should_fail/choice_cannot_be_implicit_1.asn
-- FAIL
Untagged-Choice1 DEFINITIONS ::=
BEGIN

Type ::= SEQUENCE {
  component [0] IMPLICIT CHOICE { alternative NULL }
}

END

